# wordwaybot

./: .gitignore  README.md  pyproject.toml  settings.yaml
core/: settings.py
telegrambot/: admin.py  apps.py  models.py  tests.py
telegrambot/management/commands/: startbot.py
telegrambot/migrations/: 0001_initial.py
telegrambot/services/: bot.py  user.py
telegrambot/services/callbacks/: base.py  start.py  utils.py
wordway/: apps.py
